made minor edits to checkout and dog page

--- a/checkout.html
+++ b/checkout.html
@@ -52,10 +52,10 @@
           <div class="address">
             <label for="state">State</label>
             <select id="state" name="state" required>
-              <option disabled selected value></option>
-              <option label="CA">CA</option>
-              <option label="TX">TX</option>
-              <option label="WA">WA</option>
+              <option disabled selected value>&nbsp;</option>
+              <option label="CA"></option>
+              <option label="TX"></option>
+              <option label="WA"></option>
             </select>
           </div>
 
@@ -79,7 +79,7 @@
 
         <label for="pickup">Pickup Location</label>
         <select id="pickup" name="pickup" required>
-          <option disabled selected value></option>
+          <option disabled selected value>&nbsp;</option>
           <option label="Downtown"></option>
         </select>
 
