--- a/dogs.html
+++ b/dogs.html
@@ -168,7 +168,7 @@
               reicid ut et etur sunt arum
               rendae pla endis re ea erum,
               qui doluptae</p>
-            </div
+            </div>
             <a href="#">
               <div class="button">
               <p>Adopt</p>
