added js file and made pics and btns clickable

--- a/dogs.html
+++ b/dogs.html
@@ -36,7 +36,7 @@
       <article class="dogs">
         <section>
           <div class="dog-card">
-            <img src="images/murphy-card.jpg" alt="murphy the dog">
+            <img onclick="dogProfile('Murphy', 123.45)" src="images/murphy-card.jpg" alt="murphy the dog">
             <div class="dog-info">
               <h2>Murphy</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -46,14 +46,12 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
           <div class="dog-card">
-            <img src="images/poppy-card.jpg" alt="poppy the dog">
+            <img onclick="dogProfile('Poppy', 123.45)" src="images/poppy-card.jpg" alt="poppy the dog">
             <div class="dog-info">
               <h2>Poppy</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -63,14 +61,12 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
           <div class="dog-card">
-            <img src="images/jack-card.jpg" alt="jack the dog">
+            <img onclick="dogProfile('Jack', 123.45)" src="images/jack-card.jpg" alt="jack the dog">
             <div class="dog-info">
               <h2>Jack</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -80,14 +76,12 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
           <div class="dog-card">
-            <img src="images/duffy-card.jpg" alt="duffy the dog">
+            <img onclick="dogProfile('Duffy', 123.45)" src="images/duffy-card.jpg" alt="duffy the dog">
             <div class="dog-info">
               <h2>Duffy</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -97,18 +91,16 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>          
           </div>
         </section>
       </article>
       <article class="dogs">
         <section>
           <div class="dog-card">
-            <img src="images/lucas-card.jpg" alt="lucas the dog">
+            <img onclick="dogProfile('Lucas', 123.45)" src="images/lucas-card.jpg" alt="lucas the dog">
             <div class="dog-info">
               <h2>Lucas</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -118,14 +110,12 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
           <div class="dog-card">
-            <img src="images/jake-card.jpg" alt="jake the dog">
+            <img onclick="dogProfile('Jake', 123.45)" src="images/jake-card.jpg" alt="jake the dog">
             <div class="dog-info">
               <h2>Jake</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -135,14 +125,12 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
           <div class="dog-card">
-            <img src="images/angus-card.jpg" alt="angus the dog">
+            <img onclick="dogProfile('Angus', 123.45)" src="images/angus-card.jpg" alt="angus the dog">
             <div class="dog-info">
               <h2>Angus</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -152,14 +140,12 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
           <div class="dog-card">
-            <img src="images/violet-card.jpg" alt="violet the dog">
+            <img onclick="dogProfile('Violet', 123.45)" src="images/violet-card.jpg" alt="violet the dog">
             <div class="dog-info">
               <h2>Violet</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -169,18 +155,16 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
         </section>
       </article>
       <article class="dogs">
         <section>
           <div class="dog-card">
-            <img src="images/piper-card.jpg" alt="piper the dog">
+            <img onclick="dogProfile('Piper', 123.45)" src="images/piper-card.jpg" alt="piper the dog">
             <div class="dog-info">
               <h2>Piper</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -190,14 +174,12 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
           <div class="dog-card">
-            <img src="images/maximus-card.jpg" alt="maximus the dog">
+            <img onclick="dogProfile('Maximus', 123.45)" src="images/maximus-card.jpg" alt="maximus the dog">
             <div class="dog-info">
               <h2>Maximus</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -207,14 +189,12 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
           <div class="dog-card">
-            <img src="images/luna-card.jpg" alt="luna the dog">
+            <img onclick="dogProfile('Luna', 123.45)" src="images/luna-card.jpg" alt="luna the dog">
             <div class="dog-info">
               <h2>Luna</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -224,14 +204,12 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
           <div class="dog-card">
-            <img src="images/stella-card.jpg" alt="stella the dog">
+            <img onclick="dogProfile('Stella', 123.45)" src="images/stella-card.jpg" alt="stella the dog">
             <div class="dog-info">
               <h2>Stella</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -241,11 +219,9 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
         </section>
       </article>
@@ -263,5 +239,6 @@
       </nav>
       <p>&copy; 2018 Adoptadog, LLC&emsp;|&emsp;Seattle, WA</p>
     </footer>
+    <script src="index.js" charset="utf-8"></script>
   </body>
 </html>
