--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <article class="dogs">
         <section>
           <div class="dog-card">
-            <img src="images/murphy-card.jpg" alt="murphy the dog">
+            <img onclick="dogProfile('Murphy', 123.45)" src="images/murphy-card.jpg" alt="murphy the dog">
             <div class="dog-info">
               <h2>Murphy</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -59,14 +59,12 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
           <div class="dog-card">
-            <img src="images/poppy-card.jpg" alt="poppy the dog">
+            <img onclick="dogProfile('Poppy', 123.45)" src="images/poppy-card.jpg" alt="poppy the dog">
             <div class="dog-info">
               <h2>Poppy</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -76,14 +74,12 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
           <div class="dog-card">
-            <img src="images/jack-card.jpg" alt="jack the dog">
+            <img onclick="dogProfile('Jack', 123.45)" src="images/jack-card.jpg" alt="jack the dog">
             <div class="dog-info">
               <h2>Jack</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -93,14 +89,12 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
           <div class="dog-card">
-            <img src="images/duffy-card.jpg" alt="duffy the dog">
+            <img onclick="dogProfile('Duffy', 123.45)" src="images/duffy-card.jpg" alt="duffy the dog">
             <div class="dog-info">
               <h2>Duffy</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -110,18 +104,16 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>          
           </div>
         </section>
       </article>
       <article class="dogs">
         <section>
           <div class="dog-card">
-            <img src="images/lucas-card.jpg" alt="lucas the dog">
+            <img onclick="dogProfile('Lucas', 123.45)" src="images/lucas-card.jpg" alt="lucas the dog">
             <div class="dog-info">
               <h2>Lucas</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -131,14 +123,12 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
           <div class="dog-card">
-            <img src="images/jake-card.jpg" alt="jake the dog">
+            <img onclick="dogProfile('Jake', 123.45)" src="images/jake-card.jpg" alt="jake the dog">
             <div class="dog-info">
               <h2>Jake</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -148,14 +138,12 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
           <div class="dog-card">
-            <img src="images/angus-card.jpg" alt="angus the dog">
+            <img onclick="dogProfile('Angus', 123.45)" src="images/angus-card.jpg" alt="angus the dog">
             <div class="dog-info">
               <h2>Angus</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -165,14 +153,12 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
           <div class="dog-card">
-            <img src="images/violet-card.jpg" alt="violet the dog">
+            <img onclick="dogProfile('Violet', 123.45)" src="images/violet-card.jpg" alt="violet the dog">
             <div class="dog-info">
               <h2>Violet</h2>
               <p><span class="cost">Cost to adopt:</span> $123.45</p>
@@ -182,11 +168,9 @@
               rendae pla endis re ea erum,
               qui doluptae</p>
             </div>
-            <a href="#">
-              <div class="button">
-              <p>Adopt</p>
-              </div>
-            </a>
+            <div onclick="addCost(123.45)" class="button">
+            <p>Adopt</p>
+            </div>
           </div>
         </section>
       </article>
@@ -209,5 +193,6 @@
       </nav>
       <p>&copy; 2018 Adoptadog, LLC&emsp;|&emsp;Seattle, WA</p>
     </footer>
+    <script src="index.js" charset="utf-8"></script>
   </body>
 </html>
