added gradient background, changed the height of imgs, added more media queries

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <article class="blog-preview">
         <h1>From Our Blog</h1>
         <article class="blog">
-          <img src="images/blog-1.jpg" alt="woman sitting with a dog">
+          <img src="images/blog-1-home.jpg" alt="woman sitting with a dog">
           <section>
             <h2>Traveling With Your Dog</h2>
             <p>Iciustiam, et ad quiaes cum que
@@ -164,7 +164,7 @@
           </section>
         </article>
         <article class="blog">
-          <img src="images/blog-2.jpg" alt="four dogs on leashes sitting">
+          <img src="images/blog-2-home.jpg" alt="four dogs on leashes sitting">
           <section>
             <h2>How To Walk Multiple Dogs</h2>
             <p>Iciustiam, et ad quiaes cum que
@@ -174,7 +174,7 @@
           </section>
         </article>
         <article class="blog">
-          <img src="images/blog-3.jpg" alt="person playing with dog at sundown">
+          <img src="images/blog-3-home.jpg" alt="person playing with dog at sundown">
           <section>
             <h2>Teach Your Dog To Fetch</h2>
             <p>Iciustiam, et ad quiaes cum que
