--- a/blog.html
+++ b/blog.html
@@ -32,56 +32,8 @@
       <span>/</span>
       <span><a href="blog.html">Blog</a></span>
     </nav>
-    <main>
-      <h1>Adoptadog Blog</h1>
-      <article class="blog">
-        <img src="images/blog-1.jpg" alt="woman sitting with a dog">
-        <section>
-          <h2>Traveling With Your Dog</h2>
-          <p>Iduciendisite quo magnatem iuntum quid quaest ea am, tenderumet adis dolenem
-          quidustrum fuga. Faceaquae estioria derum recuptatur, cum volore, undipsa doloreium
-          hillupta aut es ut alitatuscit ommossum haritatur arum qui officae videbiti corporeium
-          faccull oribus es quidignis ipietus explam sus am aut amet ant fugiatum, utem non reptat.</p>
+    <main id="blog-main">
 
-          <p>Uptiusd andesci qui nem aut vendion ectur? Debis que explaut laborenia que doluptur, con
-          et labor abor sant poreperum dio quat que doluptatur aut voluptassim quisciatquam ea ad
-          qui con nes cus esere dolut hicto teni solutenis alit ulparume nonseca estorer spernam
-          voluptassim quisciatquam ea ad qui con nes cus esere dolut hicto teni solutenis alit
-          ulparume nonseca estorer spernam.</p>
-        </section>
-      </article>
-      <article class="blog">
-        <img src="images/blog-2.jpg" alt="four dogs on leashes sitting">
-        <section>
-          <h2>How To Walk Multiple Dogs</h2>
-          <p>Iduciendisite quo magnatem iuntum quid quaest ea am, tenderumet adis dolenem
-          quidustrum fuga. Faceaquae estioria derum recuptatur, cum volore, undipsa doloreium
-          hillupta aut es ut alitatuscit ommossum haritatur arum qui officae videbiti corporeium
-          faccull oribus es quidignis ipietus explam sus am aut amet ant fugiatum, utem non reptat.</p>
-
-          <p>Uptiusd andesci qui nem aut vendion ectur? Debis que explaut laborenia que doluptur, con
-          et labor abor sant poreperum dio quat que doluptatur aut voluptassim quisciatquam ea ad
-          qui con nes cus esere dolut hicto teni solutenis alit ulparume nonseca estorer spernam
-          voluptassim quisciatquam ea ad qui con nes cus esere dolut hicto teni solutenis alit
-          ulparume nonseca estorer spernam.</p>
-        </section>
-      </article>
-      <article class="blog">
-        <img src="images/blog-3.jpg" alt="person playing with dog at sundown">
-        <section>
-          <h2>Teach Your Dog To Fetch</h2>
-          <p>Iduciendisite quo magnatem iuntum quid quaest ea am, tenderumet adis dolenem
-          quidustrum fuga. Faceaquae estioria derum recuptatur, cum volore, undipsa doloreium
-          hillupta aut es ut alitatuscit ommossum haritatur arum qui officae videbiti corporeium
-          faccull oribus es quidignis ipietus explam sus am aut amet ant fugiatum, utem non reptat.</p>
-
-          <p>Uptiusd andesci qui nem aut vendion ectur? Debis que explaut laborenia que doluptur, con
-          et labor abor sant poreperum dio quat que doluptatur aut voluptassim quisciatquam ea ad
-          qui con nes cus esere dolut hicto teni solutenis alit ulparume nonseca estorer spernam
-          voluptassim quisciatquam ea ad qui con nes cus esere dolut hicto teni solutenis alit
-          ulparume nonseca estorer spernam.</p>
-        </section>
-      </article>
     </main>
     <footer>
       <img src="images/adoptadog-logo.svg" alt="adoptadog logo">
@@ -96,5 +48,6 @@
       </nav>
       <p>&copy; 2018 Adoptadog, LLC&emsp;|&emsp;Seattle, WA</p>
     </footer>
+    <script src="blog.js"></script>
   </body>
 </html>
