added user persona and testing.txt

--- a/dogs.html
+++ b/dogs.html
@@ -16,7 +16,7 @@
       <div class="checkout">
         <div class="cart">
           <img src="images/cart-icon.svg" alt="cart icon">
-          <p>$1234.56</p>
+          <p id="checkout-total">$1234.56</p>
         </div>
         <a href="checkout.html">
           <div class="button">
